# axon

./: .gitignore  README.md  arxiv_bot_design.md  config.toml  pyproject.toml
data/: venue_list.toml
prompts/: daily_summary.txt  paper_analysis.txt
skills/arxiv-bot-gemini/: SKILL.md
skills/axon-architecture/: SKILL.md
src/axon/: cli.py  models.py  orchestrator.py  pipeline.py  scheduler.py
src/axon/analysis/: __init__.py  analyzer.py  digest.py
src/axon/crawler/: __init__.py
src/axon/delivery/: __init__.py  base.py  markdown.py
src/axon/llm/: __init__.py  base.py  gemini.py  gpt.py  ollama.py
src/axon/modules/: analyzer.py  delivery.py  fetcher.py  filter.py
tests/: test_analysis_schemas.py  test_gpt_provider.py  test_llm_factory.py
