[project]
name = "axon"
version = "0.1.0"
description = "ArXiv AI Agent research digest bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "arxiv>=2.4.1",
    "google-genai>=1.66.0",
    "hatchling>=1.29.0",
    "jinja2>=3.1.6",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "typer>=0.24.1",
]

[project.scripts]
axon = "axon.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axon"]
